--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
-title: praxis
-email: praxis.nyc@protonmail.com
+title: jekyll-template
+email: your email here
 description: >- # this means to ignore newlines until "baseurl:"
-  Decolonize your attention
+  Lorem Ipsum
 baseurl: ''
-url: 'https://praxis.nyc/'
-twitter_username: nonlinear
-github_username: nonlinear
+basecolor: '#000000' # for browser settings
+url: ''
+twitter_username: 
+github_username: 
 
 sass:
   load_paths:
