--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
   "dependencies": {
     "animatewithsass": "^3.2.1",
     "bootstrap": "^4.3.1",
-    "ics-to-json": "^1.0.0",
     "jquery": "^3.4.1",
-    "popper.js": "^1.15.0",
-    "tile": "github:praxisnyc/tile",
-    "wowjs": "^1.1.3"
+    "popper.js": "^1.15.0"
   }
 }
