--- a/package.json
+++ b/package.json
@@ -12,16 +12,7 @@
   "dependencies": {
     "animatewithsass": "^3.2.1",
     "bootstrap": "^4.4.1",
-    "diff": "^3.5.0",
-    "extend": "^3.0.2",
-    "fstream": "^1.0.12",
     "jquery": "^3.4.1",
-    "js-yaml": "^3.13.1",
-    "lodash": "^4.17.15",
-    "lodash.mergewith": ">=4.6.2",
-    "mixin-deep": "^1.3.2",
-    "popper.js": "^1.16.1",
-    "set-value": "^2.0.1",
-    "tar": "^2.2.2"
+    "popper.js": "^1.16.1"
   }
 }
