--- a/reveal.js/package.json
+++ b/reveal.js/package.json
@@ -22,6 +22,17 @@
   "engines": {
     "node": ">=9.0.0"
   },
+    "dependencies": {
+    "diff": "^3.5.0",
+    "extend": "^3.0.2",
+    "fstream": "^1.0.12",
+    "js-yaml": "^3.13.1",
+    "lodash": "^4.17.15",
+    "lodash.mergewith": ">=4.6.2",
+    "mixin-deep": "^1.3.2",
+    "set-value": "^2.0.1",
+    "tar": "^2.2.2"
+  },
   "devDependencies": {
     "express": "^4.16.2",
     "grunt": "^1.0.4",
