--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: jekyll-template
-email: your email here
+title: Bushwick Ayuda Mutua
+email: info@nicholasfrota.com
 description: >- # this means to ignore newlines until "baseurl:"
   Lorem Ipsum
 baseurl: ''
