--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "animatewithsass": "^3.2.1",
-    "bootstrap": "^4.4.1",
+    "bootstrap": "^4.5.2",
     "diff": "^3.5.0",
     "extend": "^3.0.2",
     "fstream": "^1.0.12",
@@ -20,6 +20,7 @@
     "lodash": "^4.17.12",
     "lodash.mergewith": "^4.6.2",
     "mixin-deep": "^1.3.2",
+    "owl.carousel": "^2.3.4",
     "popper.js": "^1.16.1",
     "set-value": "^2.0.1",
     "tar": "^2.2.2"
