--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
-title: Bushwick Ayuda Mutua
+title: 'Bushwick Ayuda Mutua'
 email: info@nicholasfrota.com
 description: >- # this means to ignore newlines until "baseurl:"
   Lorem Ipsum
-baseurl: ''
+baseurl: 'bushwichayudamutua.com'
 basecolor: '#000000' # for browser settings
-url: ''
+url: 'bushwichayudamutua.com'
+img: 'BAM.svg'
 twitter_username: 
 github_username: 
 
