--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: ''
 basecolor: '#000000' # for browser settings
 url: ''
-img: 'BAM.svg'
+image: 'BAM.svg'
 twitter_username: 
 github_username: 
 
