--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,14 @@
 title: Bushwick Ayuda Mutua
-email: info@nicholasfrota.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Lorem Ipsum
+email: bushwickayudamutua@gmail.com
+description: A network of Bushwick neighbors supporting neighbors | Una red de vecines respaldando a vecines en Bushwick.
 baseurl: ''
 basecolor: '#000000' # for browser settings
 url: ''
 image: 'BAM.svg'
-twitter_username: 
-github_username: 
+twitter_username: bushwickayuda
+github_username: bushwickayudamutua
 
 plugins:
-  - airtable
   - jekyll-admin
 
 sass:
