--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ github_username: bushwickayudamutua
 
 plugins:
   - jekyll-admin
+  - jekyll-get-json
 
 sass:
   load_paths:
@@ -24,3 +25,7 @@ exclude:
   - package.json
   - package-lock.json
   - yarn.lock
+
+jekyll_get_json:
+    data: requests
+    json: https://file.baml.ink/data/open-requests.json
